<resources>
    <string name="app_name" translatable="false">PIA6 TODO Application</string>
    <string name="title_main" translatable="false">PIA6 TODO Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hint_title">Title of the task</string>
    <string name="hint_description">Description of the task</string>
    <string name="label_completed">Completed</string>
    <string name="label_filter_all_tasks">All Tasks</string>
    <string name="label_filter_finished_tasks">Finished Tasks</string>
    <string name="label_filter_archived_tasks">Archived Tasks</string>
    <string name="label_tasks">Tasks</string>
    <string name="label_filter_ongoing_tasks">Ongoing Tasks</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_info">Info</string>
    <string name="label_add_task">Add Task</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_info">Info</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="label_detail_created">Created: </string>
</resources>
