<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/label_tasks" />
        <item
            android:id="@+id/nav_add_task"
            android:icon="@drawable/ic_exposure_plus_1_black_24dp"
            android:title="@string/label_add_task" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_equalizer_black_24dp"
            android:title="@string/label_statistics" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/label_info" />
    </group>

</menu>
